--- a/frontEnd/src/styling/WordCloud.css
+++ b/frontEnd/src/styling/WordCloud.css
@@ -10,7 +10,7 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    margin-bottom: 80px;
+    margin-bottom: 0px;
     padding: 10px;
     border-radius: 8px;
     margin-left: 20px;
